--- a/android/res/layout/crimsim_activity.xml
+++ b/android/res/layout/crimsim_activity.xml
@@ -3,11 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.metalrain.crimsim.android.views.PlayerView
+    <com.metalrain.stocksimulator.android.views.PlayerView
         android:id="@+id/player_view"
         android:layout_width="match_parent"
         android:layout_height="120dp"/>
-    <com.metalrain.crimsim.android.views.OrderView
+    <com.metalrain.stocksimulator.android.views.OrderView
         android:id="@+id/order_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
