--- a/android/res/layout/player_view.xml
+++ b/android/res/layout/player_view.xml
@@ -21,7 +21,7 @@
         android:layout_marginLeft="25dp"/>
 
 
-    <com.metalrain.crimsim.android.views.EntityRendererView
+    <com.metalrain.stocksimulator.android.views.EntityRendererView
         android:layout_below="@id/iteration"
         android:layout_alignParentRight="true"
         android:id="@+id/player_graph"
