--- a/android/res/values/styles.xml
+++ b/android/res/values/styles.xml
@@ -1,12 +1,7 @@
 <resources>
 
-    <style name="GdxTheme" parent="android:Theme">
-		<item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:colorBackgroundCacheHint">@null</item>
-        <item name="android:windowAnimationStyle">@android:style/Animation</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowFullscreen">true</item>
+    <style name="MyTheme" parent="Theme.AppCompat">
+
     </style>
 
 </resources>
