--- a/android/res/layout/main_menu_activity.xml
+++ b/android/res/layout/main_menu_activity.xml
@@ -60,6 +60,12 @@
             android:text="Start Game"
             android:layout_gravity="center"
             android:id="@+id/start_game"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Resume Game"
+            android:layout_gravity="center"
+            android:id="@+id/resume_game"/>
 
     </LinearLayout>
 </LinearLayout>
