--- a/android/res/layout/player_view.xml
+++ b/android/res/layout/player_view.xml
@@ -10,6 +10,7 @@
         android:text="Market Iteration: 100/1300"
         android:id="@+id/iteration"
         android:layout_alignParentLeft="true"
+        android:layout_marginLeft="10dp"
          />
     <TextView
         android:layout_width="wrap_content"
