updates to main menu

--- a/android/res/layout/main_menu_activity.xml
+++ b/android/res/layout/main_menu_activity.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
@@ -10,6 +13,10 @@
         android:text="Stock Simulator"
         android:id="@+id/Label"
         android:layout_gravity="center_horizontal" />
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
 
     <LinearLayout
         android:orientation="vertical"
@@ -68,4 +75,18 @@
             android:id="@+id/resume_game"/>
 
     </LinearLayout>
+
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
+    <TextView
+        android:textSize="10sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Copyright 2015, Adam Hammer, GPL Release"
+        android:id="@+id/Copyright"
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
