--- a/android/res/layout-land/main_menu_activity.xml
+++ b/android/res/layout-land/main_menu_activity.xml
@@ -98,6 +98,13 @@
             android:layout_gravity="center"
             android:text="Resume Game" />
 
+        <Button
+            android:id="@+id/source_code"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Get Source" />
+
     </LinearLayout>
 
 
